--- a/ConquestAmerica/src/application/QuizScreen.fxml
+++ b/ConquestAmerica/src/application/QuizScreen.fxml
@@ -19,10 +19,11 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button fx:id="submitButton" mnemonicParsing="false" onAction="#submitAnswers" prefHeight="31.0" prefWidth="97.0" text="Submit" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-      <Button fx:id="retreatButton" alignment="CENTER" mnemonicParsing="false" onAction="#retreatBattle" prefHeight="31.0" prefWidth="86.0" text="Retreat" GridPane.rowIndex="3" />
+      <Button fx:id="submitButton" mnemonicParsing="false" onAction="#submitAnswers" prefHeight="31.0" prefWidth="97.0" text="Submit" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+      <Button fx:id="retreatButton" alignment="CENTER" mnemonicParsing="false" onAction="#retreatBattle" prefHeight="31.0" prefWidth="86.0" text="Retreat" GridPane.rowIndex="4" />
       <Label fx:id="stateName" alignment="CENTER" prefHeight="77.0" prefWidth="500.0" text="State Quiz" GridPane.columnSpan="2147483647">
          <font>
             <Font name="Bank Gothic Medium BT" size="15.0" />
@@ -34,6 +35,22 @@
       <TextArea fx:id="answerTwo" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
       <Label fx:id="resultOne" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <Label fx:id="resultTwo" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <Button fx:id="returnGame" mnemonicParsing="false" onAction="#returnConquest" prefHeight="31.0" prefWidth="85.0" text="Return" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <Button fx:id="returnGame" mnemonicParsing="false" onAction="#returnConquest" prefHeight="31.0" prefWidth="85.0" text="Return" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <GridPane GridPane.columnIndex="1" GridPane.rowIndex="3">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label fx:id="correctStateText" text="Correct State : " visible="false" />
+            <Label fx:id="correctCapitalText" text="Correct Capital : " visible="false" GridPane.rowIndex="1" />
+            <Label fx:id="correctState" visible="false" GridPane.columnIndex="1" />
+            <Label fx:id="correctCapital" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
    </children>
 </GridPane>
